created main part

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="fira-sans-thin">
+    <!-- start header part -->
     <header class="header-wrraper">
         <div class="navber">
             <div class="logo">
@@ -29,8 +30,52 @@
             <img src="assets/hero.png" alt="">
         </div>
     </header>
+    <!-- pillars of bangladesh -->
     <main>
+        <section class="container">
+            <div class="pillars of bd">
+                <h1>Pillars of "Bangladesh 2.0"</h1>
+            </div>
+            <div class="box-container">
+                <div class="Innovation">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Innovation</h2>
+                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,
+                        emphasizing four pillars: smart government, smart economy, smart citizens, and smart society
+                        (Kaiser, 2024) . </p>
+                </div>
+                <div class="Sustainability">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Sustainability</h2>
+                    <p>Environmental sustainability Preserving the planet for future generations, Reducing the negative
+                        impact of building designs on the environment, Using local materials, Improving solid waste
+                        management. </p>
+                </div>
+                <div class="Infrastructure">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Infrastructure</h2>
+                    <p>A pillar of the Smart Bangladesh master plan, which aims to create a more inclusive future.A
+                        pillar of Smart Bangladesh 2041, which aims to boost economic growth and prosperity. </p>
+                </div>
+                <div class="Empowerment">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Empowerment</h2>
+                    <p>Building resilience, confidence, and social inclusion through life skills support, coaching, and
+                        regular check-ins.Meeting the basic needs of participants, such as providing access to
+                        healthcare </p>
+                </div>
+            </div>
+        </section>
+        <section class="vision of future">
+            <div class="card-section">
+                <h1>The Vision of Future</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure, the country is set to become a global model of
+                    development.</p>
+            </div>
 
+        </section>
     </main>
     <footer>
 
