--- a/index.html
+++ b/index.html
@@ -41,27 +41,24 @@
                     <img src="assets/card-icon.png" alt="">
                     <h2>Innovation</h2>
                     <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,
-                        emphasizing four pillars: smart government, smart economy, smart citizens, and smart society
-                        (Kaiser, 2024) . </p>
+                    </p>
                 </div>
                 <div class="Sustainability">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Sustainability</h2>
-                    <p>Environmental sustainability Preserving the planet for future generations, Reducing the negative
-                        impact of building designs on the environment, Using local materials, Improving solid waste
-                        management. </p>
+                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,
+                    </p>
                 </div>
                 <div class="Infrastructure">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Infrastructure</h2>
-                    <p>A pillar of the Smart Bangladesh master plan, which aims to create a more inclusive future.A
-                        pillar of Smart Bangladesh 2041, which aims to boost economic growth and prosperity. </p>
+                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,.
+                    </p>
                 </div>
                 <div class="Empowerment">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Empowerment</h2>
-                    <p>Building resilience, confidence, and social inclusion through life skills support, coaching, and
-                        regular check-ins.Meeting the basic needs of participants, such as providing access to
+                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,.
                         healthcare </p>
                 </div>
             </div>
@@ -70,11 +67,50 @@
             <div class="card-section">
                 <h1>The Vision of Future</h1>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
-                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in <br> renewable energy,
                     digital transformation, and robust infrastructure, the country is set to become a global model of
                     development.</p>
             </div>
+            <div class="card-container">
+                <div class="card-box1">
+                    <img src="assets/card-icon.png" alt="">
 
+                    <h2 class="section-title">Digital Transformation</h2>
+                    <p class="description">Creating a nationwide digital ecosystem to enhance connectivity and access to
+                        services for all
+                        citizens. </p>
+                    <button class="learn-more1">Learn More</button>
+                </div>
+                <div class="card-box2">
+                    <img src="assets/card-icon.png" alt="">
+
+                    <h2 class="section-title">Green Energy</h2>
+                    <p class="description">Investments in solar and wind energy to ensure a sustainable and eco-friendly
+                        future.. </p>
+                    <button class="learn-more2">Learn More</button>
+                </div>
+                <div class="card-box3">
+                    <img src="assets/card-icon.png" alt="">
+
+                    <h2 class="section-title">Modern Infrastructure</h2>
+                    <p class="description">Building state-of-the-art infrastructure to support economic growth and
+                        global competitiveness. </p>
+                    <button class="learn-more3">Learn More</button>
+                </div>
+            </div>
+
+        </section>
+        <section>
+            <div class="bangladesh-bd">
+                <p>
+                    Hasina has long been accused of implementing repressive authoritarian measures against her political
+                    opponents, critics, and the media. During her regime, it was common for anyone who spoke against the
+                    government to be abducted, subjected to extrajudicial killings, or imprisoned. Finding justice and
+                    securing one's rights was rare and seemingly an unattainable dream during her rule.
+                </p>
+                <h1>Dr. Muhammad Yunus </h1>
+                <p>Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
         </section>
     </main>
     <footer>
