--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 </div>
             </div>
         </section>
-        <section class="vision of future">
+        <!-- vision of future start -->
+        <section class="vision-of-future">
             <div class="card-section">
                 <h1>The Vision of Future</h1>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
@@ -100,7 +101,7 @@
             </div>
 
         </section>
-        <section>
+        <section class="opation">
             <div class="bangladesh-bd">
                 <p>
                     Hasina has long been accused of implementing repressive authoritarian measures against her political
@@ -112,6 +113,73 @@
                 <p>Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </section>
+        <!-- recent news part -->
+        <section class="bangladesh-launches">
+            <div>
+                <h1> Recent News</h1>
+
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure, the country is set to become a global model of
+                    development.</p>
+            </div>
+            <div class="box1">
+                <div class="box1-left">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div>
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="assets/al-jazeera.png" alt="">
+                    Date: 05/01/2025 Time: 10.25 PM
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and
+                        accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-primary">Read More</button>
+                </div>
+
+            </div>
+            <div class="box2">
+                <div>
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="assets/al-jazeera.png" alt="">
+                    Date: 05/01/2025 Time: 10.25 PM
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and
+                        accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-primary">Read More</button>
+                </div>
+
+                <div class="box1-right">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+            </div>
+
+        </section>
+        <!-- donate section -->
+        <section class="donate">
+            <div class="donate-today">
+                <h1>Donate Today</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. <br> With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure.</p>
+            </div>
+            <div class="donate-money">
+                <h1>100 Taka</h1>
+                <h2 class="money"> 200 Taka</h2>
+                <h1>500 Taka</h1>
+                <h1>1000 Taka</h1>
+
+            </div>
+            <div>
+                <form action=""><input type="text" name="" id="" placeholder="Other Amount (Taka)"> </form>
+                <button class="Done-Now">Done Now</button>
+            </div>
+
+        </section>
+
+
     </main>
     <footer>
 
