added footer part

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <!-- pillars of bangladesh -->
     <main>
-        <section class="container">
+        <!-- <section class="container">
             <div class="pillars of bd">
                 <h1>Pillars of "Bangladesh 2.0"</h1>
             </div>
@@ -62,7 +62,7 @@
                         healthcare </p>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- vision of future start -->
         <section class="vision-of-future">
             <div class="card-section">
@@ -115,7 +115,7 @@
         </section>
         <!-- recent news part -->
         <section class="bangladesh-launches">
-            <div>
+            <div class="news-satellite">
                 <h1> Recent News</h1>
 
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
@@ -127,9 +127,10 @@
                 <div class="box1-left">
                     <img src="assets/satelite.png" alt="">
                 </div>
-                <div>
+                <div class="news-satellite">
                     <h1>Bangladesh Launches New Satellite</h1>
                     <img src="assets/al-jazeera.png" alt="">
+                    <br>
                     Date: 05/01/2025 Time: 10.25 PM
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and
@@ -140,9 +141,10 @@
 
             </div>
             <div class="box2">
-                <div>
+                <div class="news-satellite">
                     <h1>Bangladesh Launches New Satellite</h1>
                     <img src="assets/al-jazeera.png" alt="">
+                    <br>
                     Date: 05/01/2025 Time: 10.25 PM
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and
@@ -182,7 +184,12 @@
 
     </main>
     <footer>
-
+        <div>
+            <h1>Bangladesh 2.0</h1>
+            <a href=""><img src="assets/facebook.png" alt=""></a>
+            <a href=""><img src="assets/instagram.png" alt=""></a>
+            <a href=""><img src="assets/x.png" alt=""></a>
+        </div>
     </footer>
 </body>
 
