added the subscribe newsletter section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="content">
                 <h5>Bangladesh 2.0</h5>
                 <p>Idea , innovation , <br>
-                    vision and challenges in <br> New Bangladesh.</p>
+                    vision and challenges in New Bangladesh.</p>
                 <button class="btn-primary">Explore New Bangladesh</button>
 
             </div>
@@ -32,37 +32,7 @@
     </header>
     <!-- pillars of bangladesh -->
     <main>
-        <!-- <section class="container">
-            <div class="pillars of bd">
-                <h1>Pillars of "Bangladesh 2.0"</h1>
-            </div>
-            <div class="box-container">
-                <div class="Innovation">
-                    <img src="assets/card-icon.png" alt="">
-                    <h2>Innovation</h2>
-                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,
-                    </p>
-                </div>
-                <div class="Sustainability">
-                    <img src="assets/card-icon.png" alt="">
-                    <h2>Sustainability</h2>
-                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,
-                    </p>
-                </div>
-                <div class="Infrastructure">
-                    <img src="assets/card-icon.png" alt="">
-                    <h2>Infrastructure</h2>
-                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,.
-                    </p>
-                </div>
-                <div class="Empowerment">
-                    <img src="assets/card-icon.png" alt="">
-                    <h2>Empowerment</h2>
-                    <p>However, Bangladesh recently adopted a long-term vision to transform into a Smart Bangladesh,.
-                        healthcare </p>
-                </div>
-            </div>
-        </section> -->
+
         <!-- vision of future start -->
         <section class="vision-of-future">
             <div class="card-section">
@@ -153,7 +123,7 @@
                     <button class="btn-primary">Read More</button>
                 </div>
 
-                <div class="box1-right">
+                <div class="box2-right">
                     <img src="assets/satelite.png" alt="">
                 </div>
             </div>
@@ -168,28 +138,50 @@
                     digital transformation, and robust infrastructure.</p>
             </div>
             <div class="donate-money">
-                <h1>100 Taka</h1>
-                <h2 class="money"> 200 Taka</h2>
-                <h1>500 Taka</h1>
-                <h1>1000 Taka</h1>
+                <button>100 Taka</button>
+                <button class="money"> 200 Taka</button>
+                <button>500 Taka</button>
+                <button>1000 Taka</button>
 
             </div>
-            <div>
+            <div class="btn">
                 <form action=""><input type="text" name="" id="" placeholder="Other Amount (Taka)"> </form>
                 <button class="Done-Now">Done Now</button>
             </div>
 
         </section>
+        <section class="newsletter">
+            <div class="subscribe-title">
+                <h1>Subscribe Newsletter</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology,
+                    promoting
+                    inclusive growth.</p>
+                <div class="input-text">
+                    <form action="">
+                        <input type="text" placeholder="Enter your email here">
+                        <button class="Subscribe">Subscribe</button>
+                    </form>
+                </div>
+                <h3>We promise not to spam you!</h3>
+
+            </div>
+        </section>
 
 
     </main>
     <footer>
-        <div>
+        <div class="footer-section-title">
+
             <h1>Bangladesh 2.0</h1>
+        </div>
+        <div class="border"></div>
+        <div class="social-icon">
             <a href=""><img src="assets/facebook.png" alt=""></a>
             <a href=""><img src="assets/instagram.png" alt=""></a>
             <a href=""><img src="assets/x.png" alt=""></a>
         </div>
+
+
     </footer>
 </body>
 
