added the pillars of bd section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,44 @@
     </header>
     <!-- pillars of bangladesh -->
     <main>
-
+        <!-- Pillars of "Bangladesh 2.0" -->
+        <section class="pillars">
+            <div>
+                <h1>Pillars of "Bangladesh 2.0"</h1>
+            </div>
+            <div class="bangladesh-2">
+                <div class="common-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <div>
+                        <h3>Innovation</h3>
+                        <p>True innovation is based on a foundation supported by three core pillars </p>
+                    </div>
+                </div>
+                <div class="common-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <div>
+                        <h3>Sustainability</h3>
+                        <p>The 3 pillars of sustainability: environmental, social and economic. </p>
+                    </div>
+                </div>
+                <div class="common-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <div>
+                        <h3>Infrastructure</h3>
+                        <p>new infrastructure is helping open up the country's domestic and international trade.
+                        </p>
+                    </div>
+                </div>
+                <div class="common-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <div>
+                        <h3>Empowerment</h3>
+                        <p> Empower Bangladesh-“One Individual at a Time” is a project to provide resources needed.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- vision of future start -->
         <section class="vision-of-future">
             <div class="card-section">
@@ -101,7 +138,7 @@
                     <h1>Bangladesh Launches New Satellite</h1>
                     <img src="assets/al-jazeera.png" alt="">
                     <br>
-                    Date: 05/01/2025 Time: 10.25 PM
+                    <span class="span">Date: 05/01/2025 Time: 10.25 PM</span>
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and
                         accepted as a common obligation of all people and all countries—not until then shall we,
@@ -115,7 +152,7 @@
                     <h1>Bangladesh Launches New Satellite</h1>
                     <img src="assets/al-jazeera.png" alt="">
                     <br>
-                    Date: 05/01/2025 Time: 10.25 PM
+                    <span class="span">Date: 05/01/2025 Time: 10.25 PM</span>
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and
                         accepted as a common obligation of all people and all countries—not until then shall we,
@@ -125,9 +162,26 @@
 
                 <div class="box2-right">
                     <img src="assets/satelite.png" alt="">
+
+                </div>
+
+            </div>
+            <div class="box1">
+                <div class="box1-left">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="news-satellite">
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <br>
+                    <span class="span">Date: 05/01/2025 Time: 10.25 PM</span>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and
+                        accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-primary">Read More</button>
                 </div>
             </div>
-
         </section>
         <!-- donate section -->
         <section class="donate">
@@ -145,7 +199,10 @@
 
             </div>
             <div class="btn">
-                <form action=""><input type="text" name="" id="" placeholder="Other Amount (Taka)"> </form>
+                <form>
+                    <input type="text" name="" id="" placeholder="Other Amount (Taka)">
+                </form>
+
                 <button class="Done-Now">Done Now</button>
             </div>
 
@@ -156,13 +213,12 @@
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology,
                     promoting
                     inclusive growth.</p>
-                <div class="input-text">
-                    <form action="">
-                        <input type="text" placeholder="Enter your email here">
-                        <button class="Subscribe">Subscribe</button>
-                    </form>
-                </div>
-                <h3>We promise not to spam you!</h3>
+
+                <form class="input-text">
+                    <input type="text" placeholder="Enter your email here">
+                    <button class="Subscribe">Subscribe</button>
+                </form>
+                < <h3>We promise not to spam you!</h3>
 
             </div>
         </section>
