--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <input type="text" placeholder="Enter your email here">
                     <button class="Subscribe">Subscribe</button>
                 </form>
-                < <h3>We promise not to spam you!</h3>
+                <h3>We promise not to spam you!</h3>
 
             </div>
         </section>
@@ -228,7 +228,7 @@
     <footer>
         <div class="footer-section-title">
 
-            <h1>Bangladesh 2.0</h1>
+            <h2>Bangladesh 2.0</h2>
         </div>
         <div class="border"></div>
         <div class="social-icon">
